fix: fix text overflow

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
     text-align: right;
     font-size: 1.75em;
     border-bottom: 1px solid black;
+    overflow-wrap: break-word;
 }
 
 .calculator-buttons__wrapper {
